# rabbitsay

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README  README.md  cli.py  rabbitsay.py  requirements.txt  rustfmt.toml  s3_website.yml.sample  setup.py
.github/workflows/: build.yaml  ci.yaml  release.yaml  rust.yaml
examples/: basic.rs
rabbitsay/: rabbitsay.py
src/: cli.rs  lib.rs  main.rs  text.rs
tests/: integration_tests.rs  test_rabbitsay.py
website/: error.html  index.html  package-lock.json  package.json  tsconfig.json
website/src/components/: Foot.astro
website/src/layouts/: Layout.astro
website/src/pages/: 404.astro  500.astro  index.astro
website/src/styles/: global.css
